[package]
name = "lyh-reactor-executor-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand = {version = "0.7.3", default-features = false, features=["std"]}
lazy_static = "1.4.0"